--- a/ppv/css/ppv.css
+++ b/ppv/css/ppv.css
@@ -423,6 +423,16 @@ img {
   margin: 0 0 0 4% !important;
 }
 
+/*.cp_i_box_01 li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}*/
+
+.cp_i_box_01 li:nth-child(2) img {
+  width: 70%;
+}
+
 .cbh {
   font-size: 47px;
   font-weight: bold;
@@ -532,7 +542,7 @@ header .h_a {
           box-sizing: border-box;
 }
 header .h_m {
-  max-width: 618px;
+  max-width: 647px;
   margin: 0 auto 0;
   line-height: 0;
 }
