--- a/BillingCP/css/BCP.css
+++ b/BillingCP/css/BCP.css
@@ -10,7 +10,7 @@ body {
   font-family: "Noto Sans JP", sans-serif !important;
   color: #fff;
   margin: 0 auto;
-  background: #fff !important;
+  background: #efefef !important;
 }
 body li {
   list-style: none;
