--- a/BillingCP/css/BCP.css
+++ b/BillingCP/css/BCP.css
@@ -336,7 +336,7 @@ img {
   text-align: center;
 }
 .cph_02 .ss {
-  font-size: 32px;
+  font-size: 76.2%;
 }
 .cp_item .cph_02 .bub , .epi .cph_02 .bub{
   display: inline-block;
