--- a/BillingCP/css/BCP.css
+++ b/BillingCP/css/BCP.css
@@ -1539,14 +1539,13 @@ footer .wrap {
   border-top: 2px solid #404040;
 }
 footer .copy {
-  margin: 0 0 32px;
+  font-size: 16px;
+  color: #000;
+  margin-top: 30px;
+  letter-spacing: 1px;
 }
 footer .copy li {
-  width: 100%;
-  margin: 5px 0 0 0;
-  line-height: 1.3;
-  font-size: 16px;
-  color: #919191;
+  margin-bottom: 5px;
 }
 footer .f_list {
   overflow: hidden;
@@ -1599,6 +1598,8 @@ footer small {
   text-align: left;
   color: #000;
 }
+
+
 
 @media screen and (max-width: 768px) {
   .line_w {
@@ -2539,7 +2540,7 @@ footer small {
     border-top: 1px solid #404040;
   }
   footer .copy {
-    margin: 0 0 6%;
+    margin: 5% 0 2%;
   }
   footer .copy li {
     margin: 0.7% 0 0 0;
@@ -3425,7 +3426,7 @@ footer small {
     border-top: 1px solid #404040;
   }
   footer .copy {
-    margin: 0 0 6%;
+    margin: 5% 0 2%;
   }
   footer .copy li {
     margin: 0.7% 0 0 0;
