--- a/BillingCP/css/BCP.css
+++ b/BillingCP/css/BCP.css
@@ -950,7 +950,7 @@ header .h_date {
 .c_tdl .rank {
   display: inline-block;
   background: #ddaa00;
-  padding:4px 14px;
+  padding:4px 14px 1px;
   margin: 0 0 16px;
   letter-spacing: 1.3px;
   font-size: 30px;
@@ -2952,6 +2952,7 @@ footer small {
     padding: 5.5% 5.1% 7%;
     border: 1.5px solid #dc0101;
     border-radius: 8px;
+    margin-top: 10%;
   }
   .time .conditions .cc_h {
     position: absolute;
