--- a/4day/css/4day.css
+++ b/4day/css/4day.css
@@ -623,6 +623,39 @@ header .h_date {
   color: #fff;
 }
 
+.timer {
+    font-size: 21px;
+    text-align: center;
+    font-weight: bold;
+    letter-spacing: 1.3px;
+    background: #000;
+    padding: 20px 0 10px;
+}
+
+.timer p {
+  text-align: center;
+  color: #fff;
+  font-size: 80%;
+}
+
+.timer span {
+    display: inline-block;
+    width: 58px;
+    background: #212121;
+    padding: 7px 4px 9px;
+    margin: 0 12px;
+    border-radius: 6px;
+    font-weight: bold;
+    font-size: 35px;
+    text-align: center;
+    letter-spacing: 1.3px;
+    line-height: 1;
+    color: #ddaa00;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
+}
+
 .time {
   padding: 40px 0 0;
   text-align: center;
@@ -1780,6 +1813,16 @@ footer small {
 
   .h2_01 .medium {
     font-size: calc(64vw/12);
+  }
+
+  .timer {
+    font-size: calc(40vw/12);
+  }
+
+  .timer span {
+    font-size: calc(45vw/12);
+    width: auto;
+    padding: 1% 2%;
   }
 
   .cp_item li {
