--- a/fbu/css/fbu.css
+++ b/fbu/css/fbu.css
@@ -249,6 +249,8 @@ header .h_date {
 .program_list ul li span.time {
   font-weight: 700;
   padding-left: 0;
+  display: inline-block;  
+  margin-right: 0;  
 }
 
 .program_list ul li span.vari {
@@ -541,7 +543,7 @@ footer small {
     margin: 5% auto 0;
   }
 
-  .pre_btn a {
+  .pre_btn a, .program_list ul li p.cs_btn {
     padding: 3.8% 0;
     border-radius: 5px;
     font-size: calc(50vw/12);
@@ -581,6 +583,38 @@ footer small {
     padding: 3% 0 0;
     font-size: calc(34vw/12);
     letter-spacing: 2.3px;
+  }
+
+  h2 {
+    font-size: calc(67vw/12);
+    margin: 4% 0 2%;
+  }
+
+  .date {
+    font-size: calc(34vw/12);
+  }
+
+  .program_list ul li {
+    margin-top: 5%; 
+    padding-bottom: 8%; 
+  }
+
+  .program_list ul li h3 {
+    font-size: calc(56vw/12);
+    margin:   3% 0 3.5%;
+  }
+
+  .program_list ul li span {
+    font-size: calc(40vw/12);
+  }
+
+  .program_list ul li span.time {
+    padding-top: 20px;  
+  }
+
+  .program_list ul li p {
+    margin-top: 1%; 
+    font-size: calc(40vw/12);
   }
 
   aside {
@@ -758,7 +792,7 @@ footer small {
     margin: 0 auto;
   }
 
-  .pre_btn a {
+  .pre_btn a, .program_list ul li p.cs_btn {
     padding: 3.7% 0;
     border-radius: 4px;
     font-size: calc(52vw/12);
@@ -850,7 +884,7 @@ footer small {
     margin: 0 0 6%;
   }
   footer .copy li {
-    margin: 0.7% 0 0 0;
+    margin: 3% 0 0 0;
     line-height: 1.3;
     font-size: calc(26vw/12);
   }
