--- a/fbu/css/fbu.css
+++ b/fbu/css/fbu.css
@@ -232,6 +232,10 @@ header .h_date {
   text-align: left;
 }
 
+.program_list ul li.nb {
+  border: none;
+}
+
 .program_list ul li h3 {
   font-size: 32px;
   margin: 30px 0 25px;
