--- a/fbu/css/fbu.css
+++ b/fbu/css/fbu.css
@@ -319,7 +319,7 @@ header .h_date {
 }
 
 .t_top {
-    margin: 57px 0 23px;
+    margin: 50px 0 ;
     text-align: right;
     white-space: nowrap;
 }
