--- a/tvod/css/tvod.css
+++ b/tvod/css/tvod.css
@@ -1512,7 +1512,7 @@ aside {
 }
 aside .wrap {
   max-width: 680px;
-  padding: 10px 0 60px;
+  padding: 10px 0 0;
   margin: 0 auto 0;
   font-size: 28px;
 }
@@ -2540,7 +2540,7 @@ footer small {
     padding: 0;
   }
   aside .wrap {
-    padding: 2% 0 8%;
+    padding: 2% 0 0%;
     margin: 0 4.5% 0;
   }
   aside .f_d dt {
@@ -3424,7 +3424,7 @@ footer small {
     padding: 0;
   }
   aside .wrap {
-    padding: 2% 0 8%;
+    padding: 2% 0 0;
     margin: 0 4.5% 0;
   }
   aside .f_d dt {
