--- a/fbu/css/fbu.css
+++ b/fbu/css/fbu.css
@@ -243,6 +243,7 @@ header .h_date {
 .program_list ul li h3 {
   font-size: 32px;
   margin: 30px 0 25px;
+  line-height: 1.31;  
 }
 
 .program_list ul li span {
@@ -585,11 +586,11 @@ footer small {
     position: relative;
     background-size: cover;
     height: auto;
-    padding: 8.5% 0 2%;
+    padding: 8% 0 8%;
     margin: 0 auto;
   }
   header .h_m {
-    width: 100%;
+    width: 77.3%;
     margin: 0 auto 0;
   }
   header .h_date {
@@ -828,7 +829,7 @@ footer small {
     max-width: 19.2%;
   }
   header .h_a {
-    padding: 9.5% 0 3%;
+    padding: 9.5% 0 9.5%;
     margin: 0 auto;
   }
   header .h_date {
