--- a/fbu/css/fbu.css
+++ b/fbu/css/fbu.css
@@ -307,6 +307,7 @@ header .h_date {
   color: #ababab;
   font-size: 24px;
   margin-top: 23px;
+  line-height: 1.75;  
 }
 
 .col2 dl {
@@ -562,6 +563,7 @@ footer small {
     border-radius: 5px;
     font-size: calc(50vw/12);
     letter-spacing: 1.1px;
+    margin-top: 20px; 
   }
 
   .det_btn a {
@@ -606,7 +608,9 @@ footer small {
 
   .date {
     font-size: calc(34vw/12);
-    max-width: 55.9%;
+    width: 55.9%;
+    padding: 5px;
+    box-sizing: border-box;
   }
 
   .program_list ul li {
@@ -616,7 +620,7 @@ footer small {
 
   .program_list ul li h3 {
     font-size: calc(56vw/12);
-    margin:   3% 0 3.5%;
+    margin:   3% 0 1.5%;
   }
 
   .program_list ul li span {
