--- a/fbu/css/fbu.css
+++ b/fbu/css/fbu.css
@@ -7,7 +7,7 @@
 body {
   line-height: 1;
   min-width: 320px;
-  font-family:  'ヒラギノ角ゴシック', 'Hiragino Sans', "Noto Sans JP", sans-serif !important;
+  font-family:  'ヒラギノ角ゴ ProN W3', "Hiragino Kaku Gothic ProN", 'Hiragino Sans', "Noto Sans JP", sans-serif !important;
   color: #fff;
   margin: 0 auto;
   background: #000000 !important;
