--- a/tvod/css/tvod.css
+++ b/tvod/css/tvod.css
@@ -617,7 +617,7 @@ header .h_a {
   position: relative;
   background: url(https://cdn.amebaowndme.com/madrid-prd/madrid-web/images/sites/598437/9aaffcd24e4198aa4a53848da2714bd4_62ecfb9a262d0b8a7646ac5b73e582e3.jpg) center top no-repeat;
   background-size: cover;
-  padding: 160px 0 170px;
+  padding: 16% 0 18%;
   margin: 0 auto;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
