--- a/4day/css/4day.css
+++ b/4day/css/4day.css
@@ -1737,6 +1737,7 @@ footer small {
     padding: 3% 0;
     text-align: center;
     font-size: calc(50vw/12);
+    border: 2px solid #dc0101;
   }
 
   .p_ir_t {
@@ -3052,6 +3053,21 @@ footer small {
     font-size: calc(42vw/12);
   }
 
+  .timer {
+    font-size: calc(36vw/12);
+   padding: 2% 0;
+  }
+
+  .timer span{
+    padding: 1% 2%;
+    margin: 0 2%;
+  }
+
+  .det_btn a {
+    border: 1.5px solid #dc0101;
+    margin: 7%;
+  }
+
   .conditions .cc_h + p {
     font-size: calc(28vw/12); 
   }
@@ -3403,6 +3419,15 @@ footer small {
 
   .p_sin50 {
     margin: 5% 2.5% 0;
+  }
+
+  .timer {
+      font-size: calc(35vw/12);
+      padding: 2%;
+  }
+
+  .timer span {
+    padding: 1%;
   }
 
   .c_ldl {
