--- a/3day/css/3day.css
+++ b/3day/css/3day.css
@@ -1159,23 +1159,30 @@ header .h_date {
 }
 
 .con_table {
-  border: 1px solid #666666;
-  border-collapse: collapse;
+  border: 2px solid #666666;
+  border-collapse: separate;
   width: 100%;
+  border-radius: 5px;
+  overflow: hidden;
+  border-spacing: 0;
 }
 .con_table th, .con_table td {
-  border: 2px solid #666;
+    border-bottom: 2px solid #666;
+    border-left: 2px solid #666;
 }
 .con_table th {
   background: #cecece;
-  
   font-size: 20px;
   padding: 20px;
   color: #000;
   text-align: center;
 }
+.con_table tr:first-child th:last-child {
+  background: #ddaa00;
+}
 .con_table tr th:nth-child(1) {
   text-align: left;
+  border-left: none;
 }
 .con_table th .small {
   font-size: 18px;
@@ -1183,6 +1190,10 @@ header .h_date {
 .con_table td {
   text-align: center;
   width: 27%;
+}
+.con_table tr:last-child th,
+.con_table tr:last-child td {
+  border-bottom: none;
 }
 .con_table img {
   max-width: 35px;
@@ -2952,7 +2963,7 @@ footer small {
 
   .time {
     padding: 5% 0 0;
-  } 
+  }
   .time .wrap {
     max-width: 100%;
     margin: 0 auto;
@@ -3397,6 +3408,16 @@ footer small {
     letter-spacing: 0.5px;
   }
 
+  .det_btn a {
+    border: 1.5px solid #dc0101;
+    margin: 7%;
+  }
+
+  .h3_info {
+    padding-left: 2%;
+    border-left: 6px solid #ddaa00;
+  }
+  
   aside {
     padding: 0;
   }
