--- a/4day/css/4day.css
+++ b/4day/css/4day.css
@@ -1599,7 +1599,10 @@ footer .wrap {
   border-top: 2px solid #404040;
 }
 footer .copy {
-  margin: 0 0 32px;
+    font-size: 16px;
+    color: #000;
+    margin-top: 30px;
+    letter-spacing: 1px;
 }
 footer .copy li {
   width: 100%;
@@ -2629,7 +2632,7 @@ footer small {
     border-top: 1px solid #404040;
   }
   footer .copy {
-    margin: 0 0 6%;
+    margin: 5% 0 2%;
   }
   footer .copy li {
     margin: 0.7% 0 0 0;
@@ -3553,7 +3556,7 @@ footer small {
     border-top: 1px solid #404040;
   }
   footer .copy {
-    margin: 0 0 6%;
+    margin: 5% 0 2%;
   }
   footer .copy li {
     margin: 0.7% 0 0 0;
