--- a/BillingCP/css/BCP.css
+++ b/BillingCP/css/BCP.css
@@ -738,6 +738,7 @@ header .h_date {
 .conditions .cc_h + p {
     letter-spacing: 1.2px;
     font-size: 17px;
+    line-height: 1.2;
 }
 
 .contents {
