--- a/3day/css/3day.css
+++ b/3day/css/3day.css
@@ -2963,7 +2963,7 @@ footer small {
 
   .time {
     padding: 5% 0 0;
-  } 
+  }
   .time .wrap {
     max-width: 100%;
     margin: 0 auto;
@@ -3410,7 +3410,7 @@ footer small {
 
   .det_btn a {
     border: 1.5px solid #dc0101;
-    margin: 7%;
+    margin: 6% 0 0;
   }
 
   .h3_info {
