--- a/4day/css/4day.css
+++ b/4day/css/4day.css
@@ -624,10 +624,10 @@ header .h_date {
 }
 
 .timer {
-    font-size: 21px;
+    font-size: 24px;
     text-align: center;
     font-weight: bold;
-    letter-spacing: 1.3px;
+    letter-spacing: 0.02em;
     background: #000;
     padding: 20px 0 10px;
 }
@@ -640,15 +640,13 @@ header .h_date {
 
 .timer span {
     display: inline-block;
-    width: 58px;
     background: #212121;
-    padding: 7px 4px 9px;
-    margin: 0 12px;
-    border-radius: 6px;
+    padding: 10px;
+    margin: 0 15px;
+    border-radius: 5px;
     font-weight: bold;
-    font-size: 35px;
+    font-size: 32px;
     text-align: center;
-    letter-spacing: 1.3px;
     line-height: 1;
     color: #ddaa00;
     -webkit-box-sizing: border-box;
