--- a/4day/css/4day.css
+++ b/4day/css/4day.css
@@ -3440,7 +3440,7 @@ footer small {
   }
 
   .timer span {
-    padding: 3% 1% 2%;
+    padding: 1% 2.5%;
     border-radius: 4px;
     letter-spacing: 0.02em;
   }
