--- a/fbu/css/fbu.css
+++ b/fbu/css/fbu.css
@@ -643,6 +643,14 @@ footer small {
     font-size: calc(50vw/12);
   }
 
+  .col2 dl {
+    margin-bottom: 4.4%;
+  }
+
+  .col2 dl dd h3 {
+    font-size: calc(36vw/12);
+  }
+
   aside {
     padding: 0;
   }
