--- a/3day/css/3day.css
+++ b/3day/css/3day.css
@@ -508,7 +508,7 @@ img {
 }
 
 .h2_04 {
-  font-size: 46px;
+  font-size: 44px;
 }
 .h2_04 .smallP {
   font-size: 87%;
@@ -594,7 +594,7 @@ header {
 }
 header .h_l {
   background: #000;
-  padding: 12px 0 13px 22px;
+  padding: 18px 0 13px 22px;
 }
 header .h_l span {
   display: inline-block;
@@ -626,6 +626,37 @@ header .h_date {
   letter-spacing: 2.5px;
   text-align: center;
   color: #fff;
+}
+
+.timer {
+    font-size: 24px;
+    text-align: center;
+    font-weight: bold;
+    letter-spacing: 0.02em;
+    background: #000;
+    padding: 20px 0 10px;
+}
+.timer p {
+  text-align: center;
+  color: #fff;
+  font-size: 75%;
+}
+
+.timer span {
+    display: inline-block;
+    background: #212121;
+    padding: 8px 5px;
+    margin: 0 10px;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 32px;
+    text-align: center;
+    line-height: 1;
+    color: #ddaa00;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
+    width: 65px;
 }
 
 .time {
@@ -1572,7 +1603,6 @@ footer .copy li {
   margin: 5px 0 0 0;
   line-height: 1.3;
   font-size: 16px;
-  color: #919191;
 }
 footer .f_list {
   overflow: hidden;
@@ -1871,6 +1901,22 @@ footer small {
   }
   .m_lot + .cbh {
     margin: 6% 0 0;
+  }
+
+
+  .timer {
+      font-size: calc(40vw/12);
+  }
+  .timer p {
+    text-align: center;
+    color: #fff;
+    font-size: 75%;
+  }
+
+  .timer span {
+    font-size: calc(50vw/12);
+    width: 9.5%;
+    padding: 1% 1.5%;
   }
 
   .time .cc_ball {
@@ -3402,6 +3448,17 @@ footer small {
     padding: 7.3% 0 0 !important;
   }
 
+  .timer {
+    font-size: calc(35vw/12);
+    padding: 3% 1%;
+  }
+.timer span {
+  padding: 2% 1.8%;
+  border-radius: 4px;
+  margin: 0 2%;
+  letter-spacing: 0.02em;
+}
+
   .t_top {
     margin: 9% 0 7%;
   }
@@ -3423,6 +3480,10 @@ footer small {
 
   .time {
     padding: 5% 0 0;
+  }
+
+  .con_table {
+    border: 1px solid #666666;
   }
   
   aside {
@@ -3485,7 +3546,7 @@ footer small {
     border-top: 1px solid #404040;
   }
   footer .copy {
-    margin: 0 0 6%;
+    margin: 5% 0 2%;
   }
   footer .copy li {
     margin: 0.7% 0 0 0;
