--- a/ppv2/css/ppv.css
+++ b/ppv2/css/ppv.css
@@ -1899,6 +1899,7 @@ footer small {
     padding: 5.5% 5.1% 7%;
     border: 2px solid #fff;
     border-radius: 10px;
+    margin-top: 13%;
   }
   .time .conditions .cc_h {
     position: absolute;
