--- a/ppv2/css/ppv.css
+++ b/ppv2/css/ppv.css
@@ -96,8 +96,9 @@ img {
 }
 
 .banner_t {
-  margin: 60px 0 0;
+  margin: 60px auto 0;
   line-height: 0;
+  max-width: 750px;
 }
 
 .pre_btn a {
@@ -554,7 +555,7 @@ header .h_date {
 
 .time {
   background: #000;
-  padding: 60px 0 82px;
+  padding: 60px 0 60px;
   text-align: center;
 }
 .time .wrap {
