--- a/ppv2/css/ppv.css
+++ b/ppv2/css/ppv.css
@@ -1270,6 +1270,18 @@ header .h_date {
   color: #000;
 }
 
+.img_list {
+  margin-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.img_list li{
+  width: 25%;
+  padding: 0 !important;
+  border: none;
+  display: block;
+}
+
 .c_five {
   margin: 0;
 }
@@ -1758,6 +1770,10 @@ footer small {
   .cp_item .cph_fig {
     max-width: 100%;
     margin: 4% auto 0;
+  }
+
+  .img_list {
+  margin-top: 3.5%;
   }
 
   .cp_i_box {
