--- a/ppv2/css/ppv.css
+++ b/ppv2/css/ppv.css
@@ -471,7 +471,7 @@ img {
 
 .cbh_img {
   max-width: 661px;
-  margin: 52px auto 0;
+  margin: 52px auto 60px;
   line-height: 0;
 }
 
@@ -1627,7 +1627,7 @@ footer small {
 
   .cbh_img {
     width: 97.7%;
-    margin: 10% auto 0;
+    margin: 10% auto 11%;
     line-height: 0;
   }
 
@@ -2557,7 +2557,7 @@ footer small {
 
   .cbh_img {
     width: 99.3%;
-    margin: 9% auto 0;
+    margin: 9% auto 10%;
   }
 
   .banner_t {
