--- a/ppv2/css/ppv.css
+++ b/ppv2/css/ppv.css
@@ -484,7 +484,7 @@ img {
 
 .ct_ig01 {
   max-width: 497px;
-  margin: 0 auto 0;
+  margin: 60px auto 0;
   line-height: 0;
 }
 
@@ -1843,7 +1843,7 @@ footer small {
 
   .ct_ig01 {
     width: 73.4%;
-    margin: 0 auto 0;
+    margin: 8% auto 0;
   }
 
   .c_top {
@@ -2758,7 +2758,7 @@ footer small {
 
   .ct_ig01 {
     width: 75.4%;
-    margin: 0 auto 0;
+    margin: 8% auto 0;
   }
 
   .c_top {
