--- a/startdash/css/osusume.css
+++ b/startdash/css/osusume.css
@@ -12,13 +12,13 @@
 
 @media screen and (max-width: 768px){
 	.cn05 {
-	    background: url(https://cdn.amebaowndme.com/madrid-prd/madrid-web/images/sites/598437/b56a9f2…_77af4c3….png) #ffdc2d center top no-repeat;
+	    background: url(https://cdn.amebaowndme.com/madrid-prd/madrid-web/images/sites/598437/1d47f6fd99539045286ab5150252e200_b312a623d08ec89d67f2ef5df2ae01e7.png) #ffdc2d center top no-repeat;
 	    background-size: cover;
 	    padding: 8% 0 7.5%;
 	}
 
 	.cn06 {
-	    background: url(https://cdn.amebaowndme.com/madrid-prd/madrid-web/images/sites/598437/b56a9f2…_77af4c3….png) #ffdc2d center top no-repeat;
+	    background: url(https://cdn.amebaowndme.com/madrid-prd/madrid-web/images/sites/598437/eb325ed74ad5075e2a1c98a061caa425_18b937369a45b970ec6c7c2079f62b0b.png) #ffdc2d center top no-repeat;
 	    background-size: cover;
 	    padding: 8% 0 7.5%;
 	}
