--- a/new/css/new.css
+++ b/new/css/new.css
@@ -569,7 +569,10 @@ header .h_date {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    margin: 25px 0 0;
+    margin: 15px 0 0;
+}
+.content_M .c_bagg {
+  margin-top: 25px;
 }
 .contents .c_bagg li {
     display: inline-block;
@@ -579,8 +582,9 @@ header .h_date {
     white-space: nowrap;
     color: #fff;
     padding: 5px 8px 2px;
-   border-radius: 4px;
-   font-family: '小塚ゴシック Pro','Kozuka Gothic Pro',sans-serif !important;
+    border-radius: 4px;
+    font-family: '小塚ゴシック Pro','Kozuka Gothic Pro',sans-serif !important;
+    font-weight: bold;
 }
 .c_bagg li:first-child {
     margin: 0;
@@ -612,6 +616,11 @@ header .h_date {
 .contents .c_bagg .dbg {
   display: inline-block;
   background: #f01639;
+}
+
+.contents .c_bagg .pre {
+  background: #000000;
+  display: inline-block;
 }
 .contents .c_bagg .time {
   color: #666666;
@@ -1349,6 +1358,9 @@ footer small {
   }
 
   .c_bagg {
+    margin-top: 3%;
+  }
+  .content_M .c_bagg {
     margin-top: 5%;
   }
 
@@ -1437,6 +1449,7 @@ footer small {
   .c_h {
     font-size: calc(46vw/12);
     line-height: 1.3;
+    margin-top: 5%;
   }
 
   .content_M .c_h {
@@ -1511,15 +1524,16 @@ footer small {
       font-size: calc(39vw/12);
       letter-spacing: 1.3px;
       margin-left: 4%;
+      min-width: 36%;
   }
   .contents .c_bagg .time:before {
       content: '';
       position: absolute;
-      top: 3%;
+      top: 0;
       left: 0;
       background-size: 100% 100%;
       width: 12.6%;
-      height: 100%;
+      height: 90%;
   }
 
   .cb_btn a {
@@ -1761,7 +1775,7 @@ footer small {
   }
 
   .contents .c_bagg .time {
-    padding: 0 0 0 9%;
+    padding: 0 0 0 7.5%;
     font-size: calc(41vw/12);
     letter-spacing: 1.3px;
   }
