--- a/new/css/new.css
+++ b/new/css/new.css
@@ -8,7 +8,13 @@
 body {
   line-height: 1;
   min-width: 320px;
-  font-family: "Noto Sans JP", sans-serif !important;
+  font-family: "Helvetica Neue",
+   Arial,
+   "Hiragino Kaku Gothic ProN",
+   "Hiragino Sans",
+   Meiryo,
+   sans-serif;
+
   color: #fff;
   margin: 0 auto;
   background: #fff;
@@ -110,7 +116,7 @@ img {
   text-align: center;
   font-size: 32px;
   font-weight: bold;
-  letter-spacing: 1.5px;
+  
   color: #000;
 }
 .pre_btn a span {
@@ -241,7 +247,7 @@ img {
   font-weight: bold;
   text-shadow: 0.3px 0.3px 0 #ddaa00;
   line-height: 1.5;
-  letter-spacing: 1.3px;
+  
   color: #000;
 }
 .cp_item .cbh {
@@ -269,7 +275,7 @@ img {
 .cp_item .cph_02 {
   font-size: 43px;
   margin: 30px 0 0;
-  letter-spacing: 1.2px;
+  
   line-height: 1.5;
 }
 .cp_item .cph_02 .ss {
@@ -285,7 +291,7 @@ img {
 .cp_item .cph_04 {
   font-size: 51px;
   margin: 54px 0 0;
-  letter-spacing: -0.5px;
+  
   text-shadow: 0.4px 0.4px 0 #000;
   white-space: nowrap;
 }
@@ -305,7 +311,7 @@ img {
   font-weight: bold;
   text-shadow: 0.5px 0.5px 0 #000;
   line-height: 2.5;
-  letter-spacing: -0.7px;
+  
   color: #000;
 }
 .cp_item .cph_05 .bob {
@@ -397,7 +403,7 @@ img {
 .cbh {
   font-size: 40px;
   font-weight: bold;
-  letter-spacing: 1.3px;
+  
   line-height: 1.5;
   color: #000;
 }
@@ -411,7 +417,7 @@ img {
 .cbh07 {
   font-size: 43px;
   font-weight: bold;
-  letter-spacing: 0.8px;
+  
   text-shadow: 0.3px 0.3px 0 #000;
   line-height: 1.5;
   color: #000;
@@ -438,7 +444,7 @@ img {
   margin: 50px 0 0;
   font-size: 34px;
   font-weight: bold;
-  letter-spacing: 1.3px;
+  
   text-shadow: 0.2px 0.2px 0 #000;
 }
 
@@ -458,7 +464,7 @@ img {
   display: inline-block;
   font-size: 30px;
   font-weight: bold;
-  letter-spacing: 1.3px;
+  
   color: #000;
 }
 
@@ -476,7 +482,7 @@ img {
   display: inline-block;
   font-size: 30px;
   font-weight: bold;
-  letter-spacing: 1.3px;
+  
   color: #000;
 }
 
@@ -515,7 +521,7 @@ header .h_date {
   padding: 25px 0 0;
   font-size: 20px;
   font-weight: bold;
-  letter-spacing: 2.5px;
+  
   text-align: center;
   color: #fff;
 }
@@ -550,7 +556,7 @@ header .h_date {
 .c_data {
     display: inline-block;
     background: #000000;
-    padding: 15px 0 13px;
+    padding: 20px 0;
     margin: 47px auto 0;
     border-radius: 30px;
     font-size: 32px;
@@ -578,10 +584,10 @@ header .h_date {
     display: inline-block;
     margin: 0 0 0 8px;
     font-size: 20px;
-    letter-spacing: 1.1px;
+    
     white-space: nowrap;
     color: #fff;
-    padding: 5px 8px 2px;
+    padding: 5px;
     border-radius: 4px;
     font-family: '小塚ゴシック Pro','Kozuka Gothic Pro',sans-serif !important;
     font-weight: bold;
@@ -654,10 +660,10 @@ header .h_date {
     display: block;
     background: #ddaa00;
     padding: 28px 0;
-    font-size: 32px;
+    font-size: 30px;
     font-weight: bold;
     border-radius: 6px;
-    letter-spacing: 1.3px;
+    
     text-align: center;
     color: #000;
 }
@@ -697,7 +703,7 @@ header .h_date {
   margin: 36px 0 0;
   font-size: 26px;
   line-height: 1.5;
-  letter-spacing: 1.2px;
+  
 }
 .contents .entry figure {
   max-width: 644px;
@@ -708,7 +714,7 @@ header .h_date {
   margin: 70px 0 0;
   line-height: 1.3;
   font-size: 17px;
-  letter-spacing: 0.8px;
+  
   color: #ababab;
 }
 .contents .p_img {
@@ -796,7 +802,7 @@ header .h_date {
   font-size: 27px;
   font-weight: normal;
   line-height: 1.5;
-  letter-spacing: 1.4px;
+  
   color: #666;
 }
 .contents .m_box li .c_it .h_ss {
@@ -845,7 +851,7 @@ header .h_date {
 .p_sin .banner .b_cau {
   margin: 53px 0 0;
   text-align: center;
-  letter-spacing: 1.2px;
+  
   font-size: 17px;
   line-height: 1.2;
   color: #ababab;
@@ -857,7 +863,7 @@ header .h_date {
   margin: 28px 0 0;
   font-size: 20px;
   font-weight: normal;
-  letter-spacing: 2.5px;
+  
   text-align: center;
   color: #fff;
 }
@@ -870,7 +876,7 @@ header .h_date {
   border-left: 11px solid #ddaa00;
   font-size: 30px;
   font-weight: bold;
-  letter-spacing: 1.2px;
+  
   line-height: 1.3;
   text-align: left;
   color: #fff;
@@ -883,7 +889,7 @@ header .h_date {
   margin: 17px 0 0;
   font-size: 52px;
   font-weight: bold;
-  letter-spacing: 1.5px;
+  
   line-height: 1.3;
   color: #fff;
 }
@@ -899,7 +905,7 @@ header .h_date {
   margin: 0;
   font-size: 26px;
   font-weight: bold;
-  letter-spacing: 1.7px;
+  
   line-height: 1.65;
   color: #fff;
 }
@@ -912,7 +918,7 @@ header .h_date {
   margin: 35px 0 0;
   font-size: 40px;
   font-weight: bold;
-  letter-spacing: 1.7px;
+  
   line-height: 1.4;
   color: #fff;
 }
@@ -978,7 +984,7 @@ header .h_date {
   text-align: center;
   font-size: 28px;
   font-weight: bold;
-  letter-spacing: 1.6px;
+  
   color: #ddaa00;
 }
 .p_sin .p_btn a:hover {
@@ -1013,7 +1019,7 @@ header .h_date {
   text-align: left;
   font-size: 25px;
   line-height: 1.8;
-  letter-spacing: 1.3px;
+  
   color: #000;
 }
 
@@ -1090,9 +1096,9 @@ header .h_date {
 }
 .t_top a {
   display: inline-block;
-  font-size: 34px;
+  font-size: 32px;
   font-weight: bold;
-  letter-spacing: 1.3px;
+  
   color: #000;
 }
 
@@ -1150,7 +1156,7 @@ aside .wrap {
 aside .f_d dt {
   margin: 60px 0 0;
   font-size: 28px;
-  letter-spacing: 1.4px;
+  
   font-weight: normal;
   color: #fff;
 }
@@ -1158,7 +1164,7 @@ aside .f_d dd {
   margin: 21px 0 0;
   font-size: 16px;
   line-height: 1.45;
-  letter-spacing: 0.1;
+  
   color: #ababab;
 }
 aside .f_d dd .caution {
@@ -1271,7 +1277,7 @@ footer small {
   display: block;
   margin: 30px 0 0;
   font-size: 16px;
-  letter-spacing: 1px;
+  
   text-align: left;
   color: #919191;
 }
@@ -1368,7 +1374,7 @@ footer small {
     padding: 3.8% 0;
     border-radius: 5px;
     font-size: calc(50vw/12);
-    letter-spacing: 1.1px;
+    
   }
   .cs_btn {
     border: 2px solid #ababab;
@@ -1392,7 +1398,7 @@ footer small {
 
    .c_data {
       display: inline-block;
-      padding: 1.6% 4.8% 1.7%;
+      padding: 2.6% 4.8% 2.7%;
       margin: 8% auto 0;
       border-radius: 30px;
       font-size: calc(38vw/12);
@@ -1407,7 +1413,7 @@ footer small {
       display: inline-block;
       margin: 0 0 0 2.3%;
       font-size: calc(31vw/12);
-      letter-spacing: 0.8px;
+      
       white-space: nowrap;
       padding: 0.9% 1.3%;
       border-radius: 3px;
@@ -1419,7 +1425,7 @@ footer small {
   .contents .c_bagg .time {
       padding: 0 0 0 7%;
       font-size: calc(39vw/12);
-      letter-spacing: 1.3px;
+      
       margin-left: 4%;
   }
   .contents .c_bagg .time:before {
@@ -1434,7 +1440,7 @@ footer small {
 
   .contents .c_text {
       margin: 3% 0 0;
-      letter-spacing: 0.9px;
+      
       line-height: 1.6;
       font-size: calc(38vw/12);
   }
@@ -1442,7 +1448,7 @@ footer small {
   .cbh {
     margin: 4% 0 0;
     font-size: calc(70vw/12);
-    letter-spacing: 0.8px;
+    
     line-height: 1.5;
   }
 
@@ -1459,7 +1465,7 @@ footer small {
   .ct_01 {
     margin: 8% 0 0;
     font-size: calc(53vw/12);
-    letter-spacing: 0.8px;
+    
   }
 
   .ct_ig01 {
@@ -1474,7 +1480,7 @@ footer small {
   .c_top a {
     display: inline-block;
     font-size: calc(46vw/12);
-    letter-spacing: 0.5px;
+    
   }
 
   .c_top_ls {
@@ -1488,7 +1494,7 @@ footer small {
   .m_top a {
     display: inline-block;
     font-size: calc(46vw/12);
-    letter-spacing: 0.5px;
+    
   }
 
   header {
@@ -1506,7 +1512,7 @@ footer small {
     background: url(https://cdn.amebaowndme.com/madrid-prd/madrid-web/images/sites/598437/5164fdd9dd5ad00ef51dab473768edab_d9ebffd9fa19bae71da72b33657bfd45.jpg) center top no-repeat;
     background-size: cover;
     height: auto;
-    padding: 7.5% 0 7%;
+    padding: 7.5% 0 14%;
     margin: 0 auto;
   }
   header .h_m {
@@ -1516,13 +1522,13 @@ footer small {
   header .h_date {
     padding: 3% 0 0;
     font-size: calc(34vw/12);
-    letter-spacing: 2.3px;
+    
   }
 
     .contents .c_bagg .time {
       padding: 0 0 0 7%;
       font-size: calc(39vw/12);
-      letter-spacing: 1.3px;
+      
       margin-left: 4%;
       min-width: 36%;
   }
@@ -1532,15 +1538,15 @@ footer small {
       top: 0;
       left: 0;
       background-size: 100% 100%;
-      width: 12.6%;
-      height: 90%;
+      width: 18px;
+      height: 18px;
   }
 
   .cb_btn a {
       padding: 4.1% 0;
       font-size: calc(51vw/12);
       border-radius: 6px;
-      letter-spacing: 1.3px;
+      
   }
 
   .t_top {
@@ -1548,8 +1554,8 @@ footer small {
   }
   .t_top a {
     display: inline-block;
-    font-size: calc(50vw/12);
-    letter-spacing: 1px;
+    font-size: calc(49vw/12);
+    
   }
 
  .con_table th {
@@ -1573,13 +1579,13 @@ footer small {
   aside .f_d dt {
     margin: 6.5% 0 0;
     font-size: calc(44vw/12);
-    letter-spacing: 1.3px;
+    
   }
   aside .f_d dd {
     margin: 3.7% 0 0;
     font-size: calc(37vw/12);
     line-height: 1.45;
-    letter-spacing: 1.3px;
+    
   }
   aside .f_d dd .caution {
     margin: 2% 0 0;
@@ -1667,7 +1673,7 @@ footer small {
   footer small {
     margin: 5% 0 0;
     font-size: calc(26vw/12);
-    letter-spacing: 1.3px;
+    
   }
 }
 @media screen and (max-width: 480px) {
@@ -1741,13 +1747,13 @@ footer small {
     padding: 3.7% 0;
     border-radius: 4px;
     font-size: calc(52vw/12);
-    letter-spacing: 0.8px;
+    
   }
 
   .p_ir_t {
     margin: 2.6% 0 0;
     font-size: calc(29vw/12);
-    letter-spacing: -0.5px;
+    
     line-height: 1.4;
   }
 
@@ -1777,7 +1783,7 @@ footer small {
   .contents .c_bagg .time {
     padding: 0 0 0 7.5%;
     font-size: calc(41vw/12);
-    letter-spacing: 1.3px;
+    
   }
   .c_h {
     font-size: calc(54vw/12);
@@ -1801,7 +1807,7 @@ footer small {
   .c_top a {
     display: inline-block;
     font-size: calc(47vw/12);
-    letter-spacing: 0.5px;
+    
   }
 
   .c_top_ls {
@@ -1815,7 +1821,7 @@ footer small {
   .m_top a {
     display: inline-block;
     font-size: calc(47vw/12);
-    letter-spacing: 0.2px;
+    
   }
 
   header {
@@ -1829,7 +1835,7 @@ footer small {
     max-width: 19.2%;
   }
   header .h_a {
-    padding: 7.5% 0 7%;
+    padding: 7.5% 0 14.6%;
     margin: 0 auto;
   }
   header .h_m {
@@ -1838,88 +1844,16 @@ footer small {
   header .h_date {
     padding: 3% 0 0;
     font-size: calc(36vw/12);
-    letter-spacing: 1.5px;
+    
   }
 
-  .time {
-    padding: 3% 0 9%;
-  }
-  .time .wrap {
-    max-width: 100%;
-    margin: 0 auto;
-  }
-  .time .t_date {
-    font-size: calc(32vw/12);
-    letter-spacing: 4px;
-  }
-  .time .t_box {
-    margin: 6% 0 0 5%;
-  }
-  .time .t_box .timer {
-    font-size: calc(36vw/12);
-    letter-spacing: 1.3px;
-  }
-  .time .t_box .timer span {
-    display: inline-block;
-    width: 10.6%;
-    padding: 1.2% 0 1.6%;
-    margin: 0 2%;
-    border-radius: 5px;
-    font-size: calc(55vw/12);
-    letter-spacing: 2.3px;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-  }
-  .time .conditions {
-    padding: 11.5% 5.1% 7%;
-    border: 1.5px solid #fff;
-    border-radius: 8px;
-  }
-  .time .conditions .cc_h {
-    position: absolute;
-    top: -3.1%;
-    left: 25%;
-    display: inline-block;
-    background: #000;
-    padding: 0 3.1%;
-    font-size: calc(39vw/12);
-    letter-spacing: 2px;
-  }
-  .time .conditions .cc_ball {
-    top: -14%;
-    right: -1%;
-    width: 22%;
-  }
-  .time .conditions .cc_text {
-    margin: 0 0 3.8%;
-    line-height: 1.45;
-    letter-spacing: -0.2px;
-    font-size: calc(42vw/12);
-  }
-  .time .conditions .cc_list li {
-    padding: 0 0 0 7.4%;
-    margin: 1.5% 0 0;
-    line-height: 1.65;
-    font-size: calc(38vw/12);
-    letter-spacing: 1.2px;
-  }
-  .time .conditions .cc_list li:before {
-    content: '';
-    content: counter(count);
-    position: absolute;
-    top: 4px;
-    left: 0;
-    width: 5%;
-    border-radius: 50%;
-    font-size: calc(30vw/12);
-  }
-  .time .conditions .cc_cau {
-    padding: 5% 0 0;
-    margin: 4.3% 0 0;
-    letter-spacing: -0.5px;
-    font-size: calc(28vw/12);
-  }
+   .c_data {
+    padding: 3% 5%;
+   }
 
+   .cb_btn a {
+    font-size: 15px;
+   }
   .contents .wrap {
     max-width: 680px;
     margin: 0 auto;
@@ -1932,7 +1866,7 @@ footer small {
   .contents .c_hh {
     padding: 8.2% 0 0;
     font-size: calc(73vw/12);
-    letter-spacing: 0.6px;
+    
     line-height: 1.8;
   }
   .contents .c_hh .sec {
@@ -1980,7 +1914,7 @@ footer small {
   .contents .c_tri {
     padding: 8.4% 0;
     font-size: calc(66vw/12);
-    letter-spacing: 0.5px;
+    
     line-height: 1.65;
     white-space: nowrap;
   }
@@ -2005,7 +1939,7 @@ footer small {
   .contents .c_fouth {
     padding: 8.8% 0 6%;
     font-size: calc(70vw/12);
-    letter-spacing: 0.5px;
+    
     line-height: 1.5;
   }
   .contents .c_fouth .sin {
@@ -2046,7 +1980,7 @@ footer small {
     padding: 2% 3.5%;
     margin: 0 0 3%;
     font-size: calc(37vw/12);
-    letter-spacing: 0.8px;
+    
     border-radius: 3px;
   }
   .contents .c_three .c_ttext {
@@ -2084,7 +2018,7 @@ footer small {
     margin: 5.6% 0 0;
     font-size: calc(43vw/12);
     line-height: 1.5;
-    letter-spacing: 0.6px;
+    
   }
   .contents .entry figure {
     margin: 6% 2% 0;
@@ -2093,7 +2027,7 @@ footer small {
     margin: 10% 0 0;
     line-height: 1.3;
     font-size: calc(27vw/12);
-    letter-spacing: -0.5px;
+    
   }
   .contents .p_img {
     width: 53.6%;
@@ -2148,7 +2082,7 @@ footer small {
     margin: 8% 0 0;
     font-size: calc(45vw/12);
     line-height: 1.5;
-    letter-spacing: 0.5px;
+    
   }
   .contents .m_box li .c_it .h_ss {
     font-size: calc(51vw/12);
@@ -2178,7 +2112,7 @@ footer small {
   }
   .p_sin .banner .b_cau {
     margin: 7.7% 0 0;
-    letter-spacing: 1px;
+    
     font-size: calc(28vw/12);
     line-height: 1.2;
   }
@@ -2188,7 +2122,7 @@ footer small {
   .p_sin .banner .b_date {
     margin: 4% 0 0;
     font-size: calc(33vw/12);
-    letter-spacing: 1.5px;
+    
   }
   .p_sin .bwrap {
     max-width: 100%;
@@ -2198,7 +2132,7 @@ footer small {
     padding: 0 0 0 2.5%;
     border-left: 8px solid #ddaa00;
     font-size: calc(51vw/12);
-    letter-spacing: 1.1px;
+    
     line-height: 1.3;
   }
   .p_sin .p_ir {
@@ -2211,13 +2145,13 @@ footer small {
   .p_sin .p_st {
     margin: 5.6% 0 0;
     font-size: calc(58vw/12);
-    letter-spacing: -0.5px;
+    
     line-height: 1.4;
   }
   .p_sin .p_set {
     margin: 5.2% 0 0;
     font-size: calc(66vw/12);
-    letter-spacing: 1.2px;
+    
     line-height: 1.4;
   }
   .p_sin .c_twenty .t_i {
@@ -2239,7 +2173,7 @@ footer small {
     margin: 0 0 0 5%;
     font-size: calc(41vw/12);
     line-height: 1.4;
-    letter-spacing: 0.2px;
+    
   }
 
   .c_five .c_five_li {
@@ -2262,7 +2196,7 @@ footer small {
     width: 49%;
     padding: 0 0 0 4%;
     font-size: calc(40vw/12);
-    letter-spacing: 0.5px;
+    
     line-height: 1.4;
   }
   .c_five .c_five_li dt span {
@@ -2277,8 +2211,8 @@ footer small {
   }
   .t_top a {
     display: inline-block;
-    font-size: calc(50vw/12);
-    letter-spacing: 0.5px;
+    font-size: 16px;
+    
   }
 
   aside {
@@ -2291,13 +2225,13 @@ footer small {
   aside .f_d dt {
     margin: 6.5% 0 0;
     font-size: calc(46vw/12);
-    letter-spacing: 0.5px;
+    
   }
   aside .f_d dd {
     margin: 3.7% 0 0;
     font-size: calc(39vw/12);
     line-height: 1.45;
-    letter-spacing: 0.5px;
+    
   }
   aside .f_d dd .caution {
     margin: 2% 0 0;
@@ -2385,6 +2319,6 @@ footer small {
   footer small {
     margin: 5% 0 0;
     font-size: calc(28vw/12);
-    letter-spacing: 1.3px;
+    
   }
 }
