--- a/new/css/new.css
+++ b/new/css/new.css
@@ -1415,7 +1415,7 @@ footer small {
       font-size: calc(31vw/12);
       
       white-space: nowrap;
-      padding: 0.9% 1.3%;
+      padding: 1%;
       border-radius: 3px;
   }
   .c_bagg li:first-child {
